password reset request styled and renamed to password_reset_request

--- a/templates/edit_account.html
+++ b/templates/edit_account.html
@@ -78,7 +78,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Danger Zone</h1>
         Get a new password.
         <br>
-        <a id="reset" href="{% url 'members:reset_password_form' %}">
+        <a id="reset" href="{% url 'members:reset_password_request' %}">
             <button class='btn btn-default'>Reset Password</button>
         </a>
         <br>
