--- a/templates/reset_password_request.html
+++ b/templates/reset_password_request.html
@@ -1,21 +1,41 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load widget_tweaks %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/mixins/forms.css' %}">
+{% endblock %}
+
 {% block main_content %}
 
-    {% if messages %}
-        <div class='messages'>
-            <ul class="messages">
-                {% for message in messages %}
-                    <li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
 
-    <h1>Password Reset</h1>
-    <p>Please enter your email below. We will send you a link to reset your password.</p>
-    <form method="POST" action="{% url 'members:reset_password_form' %}" method="post" class="form-signin"> {% csrf_token %}
-        {{ reset_request_form.as_p }}
-        <input type="submit" class="btn-lg btn-dark" value="Send Code to Email">
+    <form method="POST" action="{% url 'members:reset_password_request' %}" class="form-signin">
+        <h1>Password Reset</h1>
+        <p>Please enter your email below. We will send you a link to reset your password.</p>
+
+        {% csrf_token %}
+        {{ reset_request_form.non_field_errors }}
+
+        <div class="form-label-group">
+            {% render_field reset_request_form.email class="form-control" placeholder=reset_request_form.email.label %}
+            {{ reset_request_form.email.label_tag }}
+            {{ reset_request_form.email.errors }}
+            {% if reset_request_form.email.help_text %}
+                <small class="form-text text-muted">
+                    {{ reset_request_form.email.help_text | safe }}
+                </small>
+            {% endif %}
+        </div>
+
+        <input type="submit" class="btn-lg btn-dark mb-2" value="Send Code to Email">
+
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
     </form>
 {% endblock %}
