new password form styled.

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,21 +1,51 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load widget_tweaks %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/mixins/forms.css' %}">
+{% endblock %}
+
 {% block main_content %}
 
-    {% if messages %}
-        <div class='messages'>
-            <ul class="messages">
-                {% for message in messages %}
-                    <li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
+    <form method="POST" action="{{ action }}" class="form-signin">
+        <h1>Password Reset</h1>
+        <p>Please enter your new password:</p>
 
-    <h1>Password Reset</h1>
-    <p>Please enter your new password:</p>
-    <form method="POST" action="" method="post" class="form-signin"> {% csrf_token %}
-        {{ password_reset_form.as_p }}
+        {% csrf_token %}
+        {{ password_reset_form.non_field_errors }}
+
+        <div class="form-label-group">
+            {% render_field password_reset_form.password1 class="form-control" placeholder=password_reset_form.password1.label %}
+            {{ password_reset_form.password1.label_tag }}
+            {{ password_reset_form.password1.errors }}
+            {% if password_reset_form.password1.help_text %}
+                <small class="form-text text-muted">
+                    {{ password_reset_form.password1.help_text | safe }}
+                </small>
+            {% endif %}
+        </div>
+
+        <div class="form-label-group">
+            {% render_field password_reset_form.password2 class="form-control" placeholder=password_reset_form.password2.label %}
+            {{ password_reset_form.password2.label_tag }}
+            {{ password_reset_form.password2.errors }}
+            {% if password_reset_form.password2.help_text %}
+                <small class="form-text text-muted">
+                    {{ password_reset_form.password2.help_text | safe }}
+                </small>
+            {% endif %}
+        </div>
+
         <input type="submit" class="btn-lg btn-dark" value="Reset Password">
+
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
     </form>
 {% endblock %}
