Minor change to activate.html to give relevant info about the code.

--- a/templates/activate.html
+++ b/templates/activate.html
@@ -10,6 +10,7 @@
 {% block main_content %}
     <form method="post" action="{{ action }}" class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal">Verify</h1>
+        <p>An email has been sent to {{ member.user.email }} with a verification code. Please enter the code below:</p>
 
         {% csrf_token %}
         {{ form.non_field_errors }}
