--- a/templates/query.html
+++ b/templates/query.html
@@ -33,17 +33,21 @@
         <div class="row">
             <div class="col-md-2 search_panel">
                 {% if request.path|slice:":8" == "/vendor/" %}
-                    <a href="{% url "vendors:add_book" %}"><button class="btn-lg btn-dark">Add New Book</button></a>
-                    <hr>
+                    <div style="text-align: center">
+                        <a href="{% url "vendors:add_book" %}"><button class="btn-lg btn-dark">Add New Book</button></a>
+                        <hr>
 
-                    {% if active_books %}
-                        <a href="{% url "vendors:inactive" %}"><button class="btn-lg btn-dark">View Inactive Books</button></a>
-                    {% else %}
-                        <a href="{% url "vendors:vendor" %}"><button class="btn-lg btn-dark">View Active Books</button></a>
-                    {% endif %}
-                    <hr>
-                    <a href="{% url "vendors:request_code" %}"><button class="btn-lg btn-dark">Request Verification Code</button></a>
-                    <hr>
+                        {% if active_books %}
+                            <a href="{% url "vendors:inactive" %}"><button class="btn-lg btn-dark">View Inactive Books</button></a>
+                        {% else %}
+                            <a href="{% url "vendors:vendor" %}"><button class="btn-lg btn-dark">View Active Books</button></a>
+                        {% endif %}
+                        <hr>
+                        <a href="{% url "vendors:mass_add" %}"><button class="btn-lg btn-dark">Mass Add Authors, Genres, and Publishers</button></a>
+                        <hr>
+                        <a href="{% url "vendors:request_code" %}"><button class="btn-lg btn-dark">Request Verification Code</button></a>
+                        <hr>
+                    </div>
                 {% endif %}
                 <form>
                     <input type="hidden" name="q" value="{{ request.GET.q }}"/>
