--- a/templates/delete_account.html
+++ b/templates/delete_account.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
+
+{% load static %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/mixins/forms.css' %}">
+{% endblock %}
 {% block main_content %}
 
-<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-    <p>If you wish to delete your account, please enter the following phrase into the text box:
-    Yes, I want to delete my account.</p>
-    <input type="text" name="confirmation" placeholder="Enter the above phrase exactly.">
-	<input type="submit" class='btn btn-default' value="Confirm Delete"/>
-</form>
+    <form method="post" action='' enctype='multipart/form-data' class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal">Delete Account</h1>
+        {% csrf_token %}
+        <p>If you wish to delete your account, please enter the following exactly as it appears:</p>
+        <p class="text-monospace">Yes, I want to delete my account.</p>
+        <div class="form-label-group">
+            <input id="confirm" type="text" name="confirmation" placeholder="Enter the above phrase exactly."
+                   class="form-control">
+            <label for="confirm">Enter the above phrase exactly.</label>
+        </div>
+        <input type="submit" class="btn btn-danger" value="Confirm Delete"/>
+    </form>
 {% endblock main_content %}
