--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -63,9 +63,7 @@
                     </div>
                     {% if messages %}
                         <div class="card-body">
-                            {% for message in messages %}
-                                <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-                            {% endfor %}
+                            {% include 'mixins/messages.html' %}
                         </div>
                     {% endif %}
                     <div class="card-body">
