--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -1,14 +1,10 @@
+@import "mixins/banner.css";
+
 .left {
     margin-left: 90%;
     margin-bottom: 3px;
 }
 
-.banner {
-    height: 150px;
-    background-color: #545D68;
-    color: white;
-    text-align: center;
-}
 
 .banner h1 {
     margin-top: 30px;
