--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -1,3 +1,5 @@
+@import "mixins/banner.css";
+
 .left {
     margin-left: 90%;
     margin-bottom: 3px;
@@ -7,12 +9,6 @@
     margin-bottom: 15px;
 }
 
-.banner {
-    height: 150px;
-    background-color: #545A68;
-    color: white;
-    text-align: center;
-}
 
 .banner h1 {
     margin-top: 30px;
