--- a/static/css/query.css
+++ b/static/css/query.css
@@ -1,16 +1,10 @@
-/* end fonts */
+@import "mixins/banner.css";
 
 .left {
     margin-left: 90%;
     margin-bottom: 3px;
 }
 
-.banner {
-    height: 150px;
-    background-color: #545A68;
-    color: white;
-    text-align: center;
-}
 
 .banner h1 {
     margin-top: 30px;
