--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,22 +1,5 @@
 @import 'mixins/forms.css';
-
-.banner {
-    color: white;
-    font-family: GlacialIndifference-bold, sans-serif;
-    background-color: #545D68;
-    background-size: cover;
-    height: 200px;
-    width: 100%;
-    display: inline-block;
-    margin-left: 15px;
-}
-
-#banner_img {
-    height: 180px;
-    width: 180px;
-    margin-left: 10px;
-    margin-top: 10px;
-}
+@import 'mixins/banner.css';
 
 .banner h3 {
     font-family: GlacialIndifference-bold, sans-serif;
