Added checkout.css (AJ)

--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -4,18 +4,36 @@
 }
 
 .banner {
-    height: 150px;
-    background-color: #545D68;
-    color: white;
-    text-align: center;
+	height: 200px;
+	text-align: center;
+	color: white;
+    font-family: GlacialIndifference-bold, sans-serif;
+    background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../images/bookshelf.jpg");
+    background-size: cover;
+    background-position: bottom center;
+    background-repeat: no-repeat;
 }
 
-.banner h1 {
-    margin-top: 30px;
+.banner h3 {
+	margin-top: 50px;
+	font-size: 32pt;
+	text-shadow: -2px 0 #545D68;, 0 2px #545D68;, 2px 0 #545D68;, 0 -2px #545D68;;
 }
 
 .confirm {
     margin-top: 20px;
+	margin-bottom: 35px;
+}
+
+.checkout_cont {
+	margin-left: -37px;
+}
+.pad-bottom {
+	margin-bottom: 35px;
+}
+
+.center {
+	text-align: center;
 }
 
 .popup {
