--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -3,21 +3,25 @@
 {% load static %}
 
 {% block per_page_css %}
-
+	<link rel="stylesheet" href="{% static 'css/terminal.css' %}">
 {% endblock %}
 
 {% block main_content %}
 
 
-    <div class="container">
+    <div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>Low Inventory Report</h3>
+			</div>
+		</div>
+	</div>
 
-        <h1>Low Inventory Report</h1>
-
+	<div class="container pad-top">
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
                     <tr>
-                        <th>Image</th>
                         <th>Name</th>
                         <th>Author</th>
                         <th>ISBN</th>
@@ -30,7 +34,6 @@
                 <tbody>
                     {% for book in report.low_inventory_books.all %}
                         <tr class="clickable-row" data-href="{{ book.get_absolute_url }}">
-                            <th><img class="img-responsive" src="{{ book.item_picture.url }}"/></th>
                             <th>{{ book.name }}</th>
                             <th>{{ book.author }}</th>
                             <th>{{ book.isbn }}</th>
@@ -52,7 +55,6 @@
 {% block jquery %}
 
     <script>
-
         jQuery(document).ready(function($) {
             $(".clickable-row").click(function() {
                 window.location = $(this).data("href");
