--- a/templates/pub_sales_view.html
+++ b/templates/pub_sales_view.html
@@ -4,16 +4,21 @@
 {% load publisher_report_total %}
 
 {% block per_page_css %}
-
+	<link rel="stylesheet" href="{% static 'css/pub-sales.css' %}">
 {% endblock %}
 
 {% block main_content %}
 
 
-    <div class="container">
+    <div class="container-fluid banner">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>Publisher Sales Reports</h3>
+			</div>
+		</div>
+	</div>
 
-        <h1>Publisher Sales Reports</h1>
-
+	<div class="container pad-top">
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
@@ -43,7 +48,6 @@
 {% block jquery %}
 
     <script>
-
         jQuery(document).ready(function($) {
             $(".clickable-row").click(function() {
                 window.location = $(this).data("href");
