Fixed table titles in user_profile

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-md-8">
-                <h1 class="text-center">Orders</h1>
+                <h1 class="text-center">Books Owned</h1>
                 <table class="table table-light table-bordered">
                     <thead class="thead-dark">
                     <tr>
@@ -70,7 +70,7 @@
                     <tbody>
                 </table>
 
-                <h1 class="text-center">Reservations</h1>
+                <h1 class="text-center">Orders</h1>
                 <table class="table table-light table-bordered">
                     <thead class="thead-dark">
                     <tr>
