--- a/templates/vendor_edit.html
+++ b/templates/vendor_edit.html
@@ -1,19 +1,59 @@
 {% extends "base.html" %}
-{% block main_content %}
-    Edit {{ book.name }}
 
-    <form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-        {{book_form.as_p}}
-        <input type="submit" class='btn btn-default' value="Save Book"/>
+{% load static %}
+{% load form_tags %}
+{% load widget_tweaks %}
+
+{% block per_page_css %}
+    <link rel="stylesheet" href="{% static 'css/edit_account.css' %}">
+{% endblock %}
+
+{% block main_content %}
+    <form action="" method="post" class="form-signin" enctype='multipart/form-data'>
+        <h1 class="h3 mb-3 font-weight-normal">Edit {{ book.name }}</h1>
+
+        {% csrf_token %}
+        {{ book_form.non_field_errors }}
+
+        {% for field in book_form %}
+            {% if field|is_field:'ClearableFileInput' %}
+                <div class="form-label-group">
+                    <input type="file" id="{{ field.id_for_label }}" class="form-control" name="{{ field.name }}"/>
+                    {{ field.label_tag }}
+                    {{ field.errors }}
+                    {% if field.help_text %}
+                        <small class="form-text text-muted">
+                            {{ field.help_text | safe }}
+                        </small>
+                    {% endif %}
+                </div>
+            {% else %}
+                {{ field.label_tag }}
+                <div class="form-label-group">
+                    {% render_field field class="form-control" placeholder=field.label %}
+                    {{ field.errors }}
+                    {% if field.help_text %}
+                        <small class="form-text text-muted">
+                            {{ field.help_text | safe }}
+                        </small>
+                    {% endif %}
+                </div>
+            {% endif %}
+        {% endfor %}
+
+        <input type="submit" class="btn btn-primary" value="Save"/>
     </form>
 
-    <br>
-
-    {% if book.is_active %}
-        <a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-default'>Delete Book</button></a>
-    {% else %}
-        <a href="{% url 'vendors:reactivate_book' book.slug %}"><button class='btn btn-default'>Reactivate Book</button></a>
-    {% endif %}
-
+    <div class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal">Danger Zone</h1>
+        <br>
+        {% if book.is_active %}
+            <h5>Sets Book to Inactive (effective deletion):</h5>
+            <a href="{% url 'vendors:delete_book' book.slug %}"><button class='btn btn-danger'>Delete Book</button></a>
+        {% else %}
+            <h5>Sets Book Back to Active:</h5>
+            <a href="{% url 'vendors:reactivate_book' book.slug %}"><button class='btn btn-danger'>Reactivate Book</button></a>
+        {% endif %}
+    </div>
 
 {% endblock main_content %}
